--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "html2canvas": "^1.0.0-alpha.12",
+    "less": "^3.10.3",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "prop-types": "^15.6.2",
