--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.0"
   },
   "scripts": {
