--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "homepage": ".",
   "dependencies": {
     "classnames": "^2.2.6",
-    "html2canvas": "^1.0.0-alpha.12",
+    "core-js": "^3.8.1",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.0.0-rc.7",
     "less": "^3.10.3",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
